// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuslastungsDisplay Gering / Hoch 1`] = `
<div
  class="AuslastungsDisplay-main"
>
  <div
    class="AuslastungsDisplay-entry"
    data-testid="first"
  >
    <span>
      1
    </span>
    <span
      class="AuslastungsDisplay-icon AuslastungsDisplay-first AuslastungsDisplay-first"
      title="Geringe Auslastung"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </svg>
    </span>
  </div>
  <div
    class="AuslastungsDisplay-entry"
    data-testid="second"
  >
    <span>
      2
    </span>
    <span
      class="AuslastungsDisplay-icon AuslastungsDisplay-second AuslastungsDisplay-second"
      title="Mittlere Auslastung"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`AuslastungsDisplay SehrHoch / Ausgebucht 1`] = `
<div
  class="AuslastungsDisplay-main"
>
  <div
    class="AuslastungsDisplay-entry"
    data-testid="first"
  >
    <span>
      1
    </span>
    <span
      class="AuslastungsDisplay-icon AuslastungsDisplay-first AuslastungsDisplay-first"
      title="Hohe Auslastung"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </span>
  </div>
  <div
    class="AuslastungsDisplay-entry"
    data-testid="second"
  >
    <span>
      2
    </span>
    <span
      class="AuslastungsDisplay-icon AuslastungsDisplay-second AuslastungsDisplay-second"
      title="Ausgebucht"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`AuslastungsDisplay Unbekannt / Hoch 1`] = `
<div
  class="AuslastungsDisplay-main"
>
  <div
    class="AuslastungsDisplay-entry"
    data-testid="first"
  >
    <span>
      1
    </span>
    <span
      class="AuslastungsDisplay-icon AuslastungsDisplay-first AuslastungsDisplay-first"
      title="Unbekannt"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
        />
      </svg>
    </span>
  </div>
  <div
    class="AuslastungsDisplay-entry"
    data-testid="second"
  >
    <span>
      2
    </span>
    <span
      class="AuslastungsDisplay-icon AuslastungsDisplay-second AuslastungsDisplay-second"
      title="Mittlere Auslastung"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
        />
      </svg>
    </span>
  </div>
</div>
`;
